fix: replace deprecated newInstance